--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     
-    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+    background-image: #f1f1f1;
 }
 
 code {
