--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     
-    background-image: #f1f1f1;
+    background-color: #f1f1f1;
 }
 
 code {
