--- a/src/components/DashBoard/dashBoard.module.css
+++ b/src/components/DashBoard/dashBoard.module.css
@@ -2,14 +2,49 @@
     position: fixed;
     z-index: 10;
     bottom: 0;
-    height: 10rem;
-    background-color: white;
+    left: 50vw;
 
-    width: 60vw;
-    min-width: 20rem;
-    left: 20vw;
+    transform: translateX(-50%);
 
     box-sizing: border-box;
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.cardArea {
+    box-sizing: border-box;
+    width: calc(500px + 2rem);
+    height: calc(200px + 2rem);
+}
+
+.chessArea {
+}
+
+.roundChessArea {
+}
+
+.leftChessArea {
+}
+
+.card {
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    margin: 1rem;
+    border-radius: 20px;
+    box-shadow: var(--shadow);
+    border: 4px solid rgba(255, 255, 255, 0.8);
+    transition: all 300ms ease-out;
+}
+
+.card.hoveredNext,
+.card.selectedNext {
+    transform: translateX(40px);
+}
+
+.card.hovered,
+.card.selected {
+    transform: translateX(-40px);
 }
