--- a/src/components/DashBoard/dashBoard.module.css
+++ b/src/components/DashBoard/dashBoard.module.css
@@ -107,26 +107,100 @@
     transform: translateX(-45px);
 }
 
-.red:hover,
-.red.selected {
+.red.chess:hover,
+.red.chess.selected {
     background-color: #f5e1da;
 }
-.green:hover,
-.green.selected {
+.green.chess:hover,
+.green.chess.selected {
     background-color: #c9e4c5;
 }
-.blue:hover,
-.blue.selected {
+.blue.chess:hover,
+.blue.chess.selected {
     background-color: #d0e8f2;
 }
-.yellow:hover,
-.yellow.selected {
+.yellow.chess:hover,
+.yellow.chess.selected {
     background-color: #ffe194;
 }
 
 .btnBars {
     position: fixed;
+    z-index: 10;
     bottom: calc(200px + 2rem);
     left: 50vw;
     transform: translateX(-50%);
+    display: flex;
+}
+
+.msg {
+    box-sizing: border-box;
+    width: 600px;
+    height: 3rem;
+    margin: 0 1rem;
+    background-color: white;
+    border-radius: 0.5rem;
+    box-shadow: var(--shadow);
+    line-height: 3rem;
+
+    padding-left: 1rem;
+}
+
+.btnArea {
+    width: 16rem;
+    margin: 0 1rem 0 3rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.submit {
+    height: calc(3rem - 8px);
+    line-height: calc(3rem - 8px);
+    text-align: center;
+    width: 8rem;
+    border-radius: 1.5rem;
+    box-shadow: var(--shadow);
+    border: 4px solid;
+    background-color: white;
+    transition: all 300ms ease-out;
+    cursor: pointer;
+}
+
+.submit.red {
+    border-color: #f5e1da;
+}
+.submit.red:hover,
+.submit.red.pressed {
+    border-color: white;
+    background-color: #f5e1da;
+    color: white;
+}
+.submit.yellow {
+    border-color: #ffe194;
+}
+.submit.yellow:hover,
+.submit.yellow.pressed {
+    border-color: white;
+    background-color: #ffe194;
+    color: white;
+}
+.submit.blue {
+    border-color: #d0e8f2;
+}
+.submit.blue:hover,
+.submit.blue.pressed {
+    border-color: white;
+    background-color: #d0e8f2;
+    color: white;
+}
+.submit.green {
+    border-color: #c9e4c5;
+}
+.submit.green:hover,
+.submit.green.pressed {
+    border-color: white;
+    background-color: #c9e4c5;
+    color: white;
 }
