--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,23 @@
+@font-face {
+    font-family: 'icomoon';
+    src: url('fonts/icomoon.eot?q3syme');
+    src: url('fonts/icomoon.eot?q3syme#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?q3syme') format('truetype'),
+        url('fonts/icomoon.woff?q3syme') format('woff'),
+        url('fonts/icomoon.svg?q3syme#icomoon') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
+}
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
-        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    font-family: 'icomoon', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+        'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     user-select: none;
+    color: #616365;
 
     --shadow: -15px 0 40px -10px rgba(37, 37, 37, 0.17);
 }
