--- a/index.css
+++ b/index.css
@@ -7,11 +7,51 @@ body {
         'Helvetica Neue', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    
+
     background-color: #f1f1f1;
+    user-select: none;
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
         monospace;
+}
+
+.footer {
+    position: fixed;
+    bottom: 10vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+
+    z-index: 100;
+}
+
+.btnContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.btn {
+    height: 3rem;
+    width: 9rem;
+    margin: 1rem;
+    color: white;
+    line-height: 3rem;
+    border-radius: calc(1.5rem + 2px);
+    border: 4px solid white;
+    text-align: center;
+
+    background: linear-gradient(147deg, #f3dbcf, #c9bbcb);
+    cursor: pointer;
+    transition: 300ms ease-out;
+    /* box-shadow: ; */
+}
+.btn:hover {
+    background: white;
+    border: 4px solid #f3dbcf;
+    color: #aaa;
 }
