--- a/index.css
+++ b/index.css
@@ -36,22 +36,30 @@ code {
 }
 
 .btn {
-    height: 3rem;
+    height: calc(3rem - 8px);
     width: 9rem;
     margin: 1rem;
     color: white;
-    line-height: 3rem;
-    border-radius: calc(1.5rem + 2px);
+    line-height: calc(3rem - 8px);
+    border-radius: 1.5rem;
     border: 4px solid white;
     text-align: center;
 
-    background: linear-gradient(147deg, #f3dbcf, #c9bbcb);
+    background: #e3c3cb;
     cursor: pointer;
     transition: 300ms ease-out;
-    /* box-shadow: ; */
+    box-shadow: -5px 0 40px -10px rgba(37, 37, 37, 0.17);
 }
 .btn:hover {
     background: white;
     border: 4px solid #f3dbcf;
     color: #aaa;
+    box-shadow: -15px 0 40px -10px rgba(37, 37, 37, 0.17);
+}
+
+.link {
+    color: rgba(0, 0, 0, 0.3);
+    border-bottom: solid 1px rgba(0, 0, 0, 0.3);
+    margin-top: 0.5rem;
+    cursor: pointer;
 }
