--- a/index.css
+++ b/index.css
@@ -22,6 +22,7 @@ body {
 
     background-color: #f1f1f1;
     user-select: none;
+    overflow: hidden;
 }
 
 code {
@@ -60,13 +61,12 @@ code {
     background: #e3c3cb;
     cursor: pointer;
     transition: 300ms ease-out;
-    box-shadow: -5px 0 40px -10px rgba(37, 37, 37, 0.17);
+    box-shadow: 0 10px 40px -10px rgb(0 64 128 / 40%);
 }
 .btn:hover {
     background: white;
     border: 4px solid #f3dbcf;
     color: #aaa;
-    box-shadow: -15px 0 40px -10px rgba(37, 37, 37, 0.17);
 }
 
 .link {
@@ -74,4 +74,105 @@ code {
     border-bottom: solid 1px rgba(0, 0, 0, 0.3);
     margin-top: 0.5rem;
     cursor: pointer;
+}
+
+.board {
+    position: fixed;
+    z-index: 101;
+    bottom: -21rem;
+    left: 50%;
+    transform: translateX(-50%);
+
+    width: 50rem;
+    height: 20rem;
+    background: white;
+    box-shadow: -15px 0 40px -10px rgba(37, 37, 37, 0.17);
+
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+    transition: all 300ms ease-out;
+    overflow: hidden;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    box-sizing: border-box;
+    padding: 1rem;
+}
+
+.top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    font-size: 0.8rem;
+    box-sizing: border-box;
+    padding: 0 0.3rem;
+    margin-bottom: 1rem;
+}
+.collapse {
+    cursor: pointer;
+}
+
+.key {
+    outline: none;
+    border: none;
+    height: 3rem;
+    width: 9rem;
+    font-size: 2rem;
+    font-weight: bolder;
+    text-align: center;
+    color: #555;
+
+    border-bottom: 1px solid #555;
+    margin-bottom: 0.3rem;
+}
+.key::placeholder {
+    font-size: 0.8rem;
+    color: rgba(0, 0, 0, 0.3);
+}
+.key:disabled {
+    background: white;
+}
+
+.inputArea {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.inputMsg {
+    color: rgba(0, 0, 0, 0.3);
+    font-size: 0.8rem;
+    height: 1rem;
+    line-height: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.seatArea {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.seat {
+    width: calc(3rem - 8px);
+    height: calc(3rem - 8px);
+    box-shadow: 0 15px 40px -10px rgb(0 64 128 / 40%);
+    margin-left: 2rem;
+    border-radius: 6px;
+
+    border: 4px solid white;
+}
+.seat:first-child {
+    margin-left: 0;
+    width: 3.5rem;
+    height: 3.5rem;
+}
+
+.start {
+    box-shadow: 0 15px 40px -10px rgb(0 64 128 / 40%);
 }
