--- a/src/components/Chatroom/chatroom.module.css
+++ b/src/components/Chatroom/chatroom.module.css
@@ -74,20 +74,41 @@
     border-color: white;
 }
 
-.input {
+.inputContainer {
     height: 2rem;
     width: 13rem;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    border-radius: 1rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    border: none;
+    overflow: hidden;
+    transition: all 300ms ease-out;
+    font-size: 0.9rem;
+}
+.channelTitle {
+    box-sizing: border-box;
+    padding-left: 1rem;
+    padding-right: 0.5rem;
+    height: 1.6rem;
+    line-height: 1.6rem;
+    border-right: 1px solid rgba(0, 0, 0, 0.2);
+}
+.input {
+    height: 2rem;
+    color: #616365;
+    width: 9rem;
+    flex-grow: 1;
     font-size: 0.9rem;
     white-space: nowrap;
     box-sizing: border-box;
-    padding-left: 0.8rem;
+    padding-left: 0.5rem;
     line-height: 2rem;
     outline: none;
-    background-color: rgba(255, 255, 255, 0.5);
-    border-radius: 1rem;
+    background-color: transparent;
     border: none;
     overflow-x: auto;
-    transition: all 300ms ease-out;
 }
 .input::-webkit-scrollbar {
     display: none;
@@ -137,7 +158,7 @@
 }
 
 .pop.collapse,
-.input.collapse {
+.inputContainer.collapse {
     width: 0;
     height: 0;
     padding: 0;
