--- a/src/components/Chatroom/chatroom.module.css
+++ b/src/components/Chatroom/chatroom.module.css
@@ -109,6 +109,7 @@
     background-color: transparent;
     border: none;
     overflow-x: auto;
+    transition: all 300ms ease-out;
 }
 .input::-webkit-scrollbar {
     display: none;
