--- a/src/components/Chatroom/chatroom.module.css
+++ b/src/components/Chatroom/chatroom.module.css
@@ -25,7 +25,7 @@
     background-color: white;
     font-size: 1.2rem;
     box-sizing: border-box;
-    box-shadow: var(--shadow);
+    box-shadow: var(--big-shadow);
     transition: all 300ms ease-out;
     cursor: pointer;
 }
