--- a/src/components/InfoPanel/infoPanel.module.css
+++ b/src/components/InfoPanel/infoPanel.module.css
@@ -1,3 +1,12 @@
+@keyframes waiting {
+    from {
+        transform: rotate(0);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
 .info {
     position: fixed;
     z-index: 10;
@@ -5,12 +14,11 @@
     top: 5rem;
     right: 0;
 
-    width: 19rem;
     max-height: calc(80vh - 10rem);
     overflow-y: auto;
 
     box-sizing: border-box;
-    padding: 1rem;
+    padding: 1rem 1rem 3rem 3rem;
 
     display: flex;
     flex-direction: column;
@@ -18,4 +26,114 @@
     align-items: center;
 }
 
+.userboard {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
 
+    margin-bottom: 1rem;
+    transition: all 300ms ease-out;
+    cursor: pointer;
+}
+
+.pin {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.avatar {
+    position: relative;
+    width: calc(3rem - 8px);
+    height: calc(3rem - 8px);
+    border: 4px solid #fff;
+    border-radius: 1.5rem;
+    box-shadow: var(--big-shadow);
+    z-index: 2;
+}
+.red .avatar {
+    background-color: #f5e1da;
+}
+.yellow .avatar {
+    background-color: #ffe194;
+}
+.blue .avatar {
+    background-color: #d0e8f2;
+}
+.green .avatar {
+    background-color: #c9e4c5;
+}
+
+.pointerContainer {
+    position: absolute;
+    left: calc(1.5rem - 7px);
+    top: calc(1.5rem - 7px);
+    height: 6px;
+    width: 0.8rem;
+    display: flex;
+    flex-direction: row;
+    background-color: white;
+    border-radius: 3px;
+}
+.pointerContainer.long {
+    top: calc(1.5rem - 6px);
+    left: calc(1.5rem - 6px);
+    height: 4px;
+    width: 1rem;
+    border-radius: 2px;
+    transform-origin: 2px 2px;
+    animation-name: waiting;
+    animation-iteration-count: infinite;
+    animation-duration: 3s;
+    animation-timing-function: linear;
+}
+
+.infoRow {
+    height: 2rem;
+    width: 13rem;
+    background-color: #fff;
+    margin-left: -1rem;
+    z-index: 1;
+    box-shadow: var(--shadow);
+    border-radius: 0.5rem;
+    box-sizing: border-box;
+    padding-left: 2rem;
+    line-height: 2rem;
+}
+
+.chess {
+    height: 2rem;
+    width: 12.5rem;
+    line-height: 2rem;
+    border-radius: 0.5rem;
+    background-color: rgba(255, 255, 255, 0.7);
+    box-shadow: var(--shadow);
+    overflow: hidden;
+    box-sizing: border-box;
+    padding-left: 1rem;
+    transition: all 300ms ease-out;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+}
+.chess:last-child {
+    margin-top: 0.5rem;
+}
+.hide.chess {
+    height: 0;
+    margin: 0;
+}
+
+.leftChess {
+    display: flex;
+    align-items: center;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+.leftChess img {
+    width: 1.5rem;
+    height: 1.5rem;
+}
